# safe_api

./: CMakeLists.txt
api/: CMakeLists.txt  api.h  api_impl.c
task/: CMakeLists.txt  task.md
task/00.unsafe_c/: CMakeLists.txt  main.c
task/01.cpp_with_classes/: CMakeLists.txt  main.cpp
task/02.cpp_oop/: CMakeLists.txt  main.cpp
task/03.templates/: CMakeLists.txt  main.cpp
